# particle-life

./: .gitignore  LICENSE  README.md  particle_life.html  particle_life.py  particle_life_3d.html  particle_life_bak.html  particle_life_dg.html  pyproject.toml
javascript/: particle_life_3d.html
particle_life/: particle_life.common.settings  particle_life.sln  particle_life.vcxproj  particle_life.vcxproj.filters
particle_life/src/: main.cpp  ofApp.cpp  ofApp.h
pyrticle_life/: particle_life.py  pyproject.toml
pyrticle_life/src/: bodies.py  rules.py  utils.py
pyrticle_life/tests/: test_utils.py
python/: particle_life.py
